<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".fragment.LoginFragment">

    <data>

        <variable
                name="resource"
                type="sandip.example.com.github_login_repo.utils.remoteUtils.Resource"/>

    </data>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

        <include
                android:id="@+id/progress"
                layout="@layout/horizontal_progress_bar"
                app:resource="@{resource}" app:layout_constraintStart_toStartOf="@+id/textView"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  tools:text="@string/welcome"
                  android:text="@string/welcome"
                  android:fontFamily="@font/roboto_bold"
                  style="@style/Base.TextAppearance.AppCompat.Headline"
                  app:layout_constraintTop_toBottomOf="@+id/progress"
                  app:layout_constraintStart_toStartOf="parent"
                  android:id="@+id/textView"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  tools:text="@string/welcome_caption"
                  android:text="@string/welcome_caption"
                  android:fontFamily="@font/roboto_light"
                  style="@style/Base.TextAppearance.AppCompat.Caption"
                  app:layout_constraintTop_toBottomOf="@+id/textView"
                  app:layout_constraintStart_toStartOf="parent"
                  android:id="@+id/caption"/>


        <android.support.design.widget.TextInputLayout
                android:id="@+id/client_id_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/client_password_input_layout"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent">

            <EditText
                    android:id="@+id/username"
                    style="@style/Base.TextAppearance.AppCompat.Headline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login"
                    android:fontFamily="@font/roboto_light"
                    android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/client_password_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    style="@style/Base.TextAppearance.AppCompat.Headline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:fontFamily="@font/roboto_light"
                    android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.button.MaterialButton
                android:id="@+id/authenticate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                app:layout_constraintTop_toTopOf="@+id/guideline"
                android:layout_marginTop="8dp"
                android:gravity="center"
                style="@style/Base.TextAppearance.AppCompat.Headline"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent=".8"
                android:textColor="@color/white"
                app:backgroundTint="@color/yellow"
                app:cornerRadius="@dimen/material_card_radius_normal"/>


        <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.6"/>

    </android.support.constraint.ConstraintLayout>


</layout>