<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="repo"
                type="sandip.example.com.github_login_repo.objects.Repository"/>
    </data>

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardUseCompatPadding="true"
            android:padding="@dimen/activity_horizontal_margin"
            app:cardCornerRadius="4dp">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/activity_horizontal_margin">


            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/date_text"
                      tools:text="11 Dec, 2018"
                      android:textColor="@color/text_color"
                      app:timeStamp="@{repo.createdAt}"
                      app:format="@{@string/day_date_short}"
                      app:emptyTxt="@{@string/empty_text}"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toTopOf="parent"
                      style="@style/Base.TextAppearance.AppCompat.Subhead"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/name"
                      tools:text="Application"
                      android:fontFamily="@font/roboto_bold"
                      android:textColor="@color/text_color"
                      android:text="@{repo.name==null ? @string/empty_text : repo.name}"
                      style="@style/Base.TextAppearance.AppCompat.Headline"
                      app:layout_constraintTop_toBottomOf="@+id/date_text"
                      app:layout_constraintStart_toStartOf="@id/date_text"/>

            <TextView android:id="@+id/description_text"
                      android:layout_width="wrap_content" android:layout_height="wrap_content"
                      app:layout_constraintTop_toBottomOf="@+id/name"
                      app:layout_constraintStart_toStartOf="@id/name"
                      tools:text="Description"
                      android:text="@string/description"
                      android:textColor="@color/yellow"
                      style="@style/Base.TextAppearance.AppCompat.Subhead"
                      android:layout_marginTop="@dimen/activity_horizontal_margin"/>

            <TextView android:id="@+id/description"
                      android:layout_width="wrap_content" android:layout_height="wrap_content"
                      app:layout_constraintTop_toBottomOf="@+id/description_text"
                      app:layout_constraintStart_toStartOf="@id/description_text"
                      tools:text="Description"
                      android:textColor="@color/text_color"
                      android:text="@{repo.description==null ? @string/empty_description : repo.description}"
                      style="@style/Base.TextAppearance.AppCompat.Subhead"/>


            <TextView android:id="@+id/language_text"
                      android:layout_width="wrap_content" android:layout_height="wrap_content"
                      app:layout_constraintTop_toBottomOf="@+id/description"
                      app:layout_constraintStart_toStartOf="@id/description"
                      tools:text="Language"
                      android:textColor="@color/yellow"
                      android:text="@string/language"
                      style="@style/Base.TextAppearance.AppCompat.Subhead"
                      android:layout_marginTop="@dimen/activity_horizontal_margin"/>

            <TextView android:id="@+id/language"
                      android:layout_width="wrap_content" android:layout_height="wrap_content"
                      app:layout_constraintTop_toBottomOf="@+id/language_text"
                      app:layout_constraintStart_toStartOf="@id/language_text"
                      tools:text="--/--"
                      android:textColor="@color/text_color"
                      android:text="@{repo.language == null ? @string/empty_text : repo.language}"
                      style="@style/Base.TextAppearance.AppCompat.Subhead"/>


            <TextView android:id="@+id/watcher_text"
                      android:layout_width="wrap_content" android:layout_height="wrap_content"
                      app:layout_constraintTop_toBottomOf="@+id/description"
                      tools:text="Private"
                      android:text="@string/private_repo"
                      android:textColor="@color/yellow"
                      android:fontFamily="@font/roboto_light"
                      app:layout_constraintHorizontal_bias="0.5"
                      app:layout_constraintLeft_toLeftOf="@id/language_text"
                      app:layout_constraintRight_toRightOf="parent"
                      app:layout_constraintStart_toEndOf="@id/language_text"
                      style="@style/Base.TextAppearance.AppCompat.Subhead"
                      android:layout_marginTop="@dimen/activity_horizontal_margin"/>

            <TextView android:id="@+id/watcher"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      app:layout_constraintTop_toBottomOf="@+id/watcher_text"
                      app:layout_constraintStart_toStartOf="@id/watcher_text"
                      tools:text="Private"
                      android:textColor="@color/text_color"
                      android:text="@{repo.repoType ? @string/yes : @string/no}"
                      style="@style/Base.TextAppearance.AppCompat.Subhead"/>

            <android.support.design.button.MaterialButton
                    android:id="@+id/showWatcher"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/show_watcher"
                    app:layout_constraintTop_toBottomOf="@+id/watcher"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:gravity="center"
                    style="@style/Base.TextAppearance.AppCompat.Headline"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintWidth_default="percent"
                    app:layout_constraintWidth_percent=".8"
                    android:textColor="@color/yellow"
                    app:backgroundTint="@color/yellow_light"
                    app:cornerRadius="@dimen/material_card_radius_large"/>


        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</layout>